implemented service discovery with spring cloud

--- a/pom.xml
+++ b/pom.xml
@@ -12,5 +12,6 @@
         <module>inventory-service</module>
         <module>order-service</module>
         <module>product-service</module>
+        <module>discovery-server</module>
     </modules>
 </project>
