--- a/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/src/main/resources/application.properties
@@ -1,8 +1,9 @@
-spring.application.name=order-service
+spring.application.name=inventory-service
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/inventory-service-db
 spring.datasource.username=dbuser
 spring.datasource.password=dbuser
 spring.jpa.hibernate.ddl-auto=create-drop
 
-server.port=8084
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+server.port=0
