--- a/pom.xml
+++ b/pom.xml
@@ -13,5 +13,6 @@
         <module>order-service</module>
         <module>product-service</module>
         <module>discovery-server</module>
+        <module>api-gateway</module>
     </modules>
 </project>
